Tighten Up Wikia Mainpage spacing (BugId:4910)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@39151 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/CorporatePage/css/CorporateSite.scss
+++ b/extensions/wikia/CorporatePage/css/CorporateSite.scss
@@ -687,3 +687,8 @@ section.SalesSupportModule {
 	   color: #000;
 	}
 }
+
+// hide bottom ad (BugId:4910)
+body.mainpage #WikiaArticleBottomAd {
+	display: none;
+}
